Updates to fix screen on small phones

--- a/style.css
+++ b/style.css
@@ -398,10 +398,10 @@ tr.talk {
   .buttons {
       float: left;
       display: block;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      padding-left: 4%;
-      padding-right: 4%;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      padding-left: 2%;
+      padding-right: 2%;
       font-size: 18px;
       text-decoration: none;
       color: darkblue;
@@ -411,10 +411,10 @@ tr.talk {
       background-color: limegreen;
       color: black;
       border: 3px solid black;
-      padding-top: 17px;
-      padding-bottom: 17px;
-      padding-left: 3.4%;
-      padding-right: 3.4%;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      padding-left: 1.4%;
+      padding-right: 1.4%;
   }
 
   .nav_logo {
